# data_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  《RAG 项目优化理解与面试讲解文档》.md
app/clients/: audit_log_repository.py  document_meta_repository.py  import_task_repository.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py  mongo_history_utils_new.py  neo4j_utils.py
app/conf/: bailian_mcp_config.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py
app/core/: load_prompt.py
app/evaluation/: __init__.py  dataset_schema.py  evaluator.py  metrics.py  report.py  run_eval.py
app/import_process/: metadata_tagging.py  导入过程记录文档
app/lm/: embedding_utils.py  lm_utils.py  reranker_utils.py
app/prompts/: __init__.py  prompt_registry.py
app/security/: auth.py
app/test/: test_auth_context.py  test_document_version_flow.py  test_evaluation_metrics.py  test_image_summary_quality.py  test_metadata_tagging.py  test_prompt_registry.py  test_query_graph.py  test_query_profile.py  test_trusted_answer.py
app/tool/: download_bgem3.py  download_reranker.py
app/utils/: escape_milvus_string_utils.py  hash_utils.py  (+6 more)
prompts/: answer_out.prompt  eval_answer_relevance_judge.prompt  eval_faithfulness_judge.prompt  hyde_prompt.prompt  image_summary.prompt  item_name_recognition.prompt  rewritten_query_and_itemnames.prompt
scripts/: e2e_smoke.py  generate_resume_metrics_card.py  import_doc_corpus.py  query_load_test.py  refresh_eval_golden_chunk_ids.py
(+28 files in other folders)
